--- a/css/base/layout.css
+++ b/css/base/layout.css
@@ -1,6 +1,6 @@
 .main-content {
     width: 800px;
-    margin-top: 100px;
+    margin-top: 10vh;
     margin-left: calc(50% - 400px);
 }
 
@@ -8,11 +8,28 @@
     width: 40%;
     padding: 40px;
     float: left;
-    border: solid 2px red;
+    background-color:  #008fae;
+    color: #fff ;
 }
+
+.main-title {
+    width: 100%;
+    text-transform: capitalize;
+    font-size: 60px;
+    font-weight: normal;
+    margin-bottom: 4.2em;
+}
+
+.policies-links {
+}
+
+.policies-links .links {
+    color: #fff;
+}
+
 .right-col {
     float: right;
     width: 60%;
     padding: 60px;
-    border: solid 2px rgb(255, 152, 25);
+    background-color: #fff;
 }
