--- a/css/components/button.css
+++ b/css/components/button.css
@@ -2,8 +2,15 @@
     background-color: #204FD0;
     border: none;
     border-radius: 25px;
-    font-size: 18px;
+    font-size: 16px;
+    line-height: 20px;
     color: #fff;
     text-transform: capitalize;
-    padding: 0.5em 1.5em ;
+    padding: 0.5em 3em ;
+    cursor: pointer;
+    transition: all 0.3s;
 }
+
+.btn:hover {
+    box-shadow: 0 2px 4px #0008;
+}   
