--- a/css/components/button.css
+++ b/css/components/button.css
@@ -8,7 +8,7 @@
     padding: 0.5em 3em ;
     cursor: pointer;
     transition: all 0.4s;
-    background: rgb(192,85,200);
+    background: #0265de;
     background: linear-gradient(90deg, #234ad5 0%, #0265de 100% );
 }
 
