--- a/css/base/layout.css
+++ b/css/base/layout.css
@@ -32,5 +32,18 @@
     float: right;
     width: 60%;
     padding: 60px;
-    background-color: #fff
+    background-color: #fff;
+    position: relative;
+}
+
+.close {
+    width: 60px;
+    height: 60px;
+    padding: 10px;
+    font-size: 30px;
+    text-align: center;
+    color: #ccc;
+    position: absolute;
+    top: 0;
+    right: 0;
 }
