--- a/css/base/layout.css
+++ b/css/base/layout.css
@@ -2,28 +2,38 @@
     width: 800px;
     margin-top: 10vh;
     margin-left: calc(50% - 400px);
+    display: inline-block;
+    position: relative;
 }
 
 .left-col {
     width: 40%;
-    padding: 40px;
-    float: left;
+    padding: 30px;
     background-color:  #008fae;
     background-image: url(../../img/img.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     color: #fff;
+    position: absolute;
+    bottom: 25px;
+    top: 25px;
+    left: 0
 }
 
 .main-title {
     width: 100%;
     text-transform: capitalize;
-    font-size: 60px;
+    font-size: 40px;
     font-weight: normal;
-    margin-bottom: 4.2em;
 }
 
+.policies-links {
+    position: absolute;
+    bottom: 15px;
+    left: 30px;
+    right: 30px;
+}
 .policies-links .links {
     color: #fff;
 }
@@ -34,16 +44,4 @@
     padding: 60px;
     background-color: #fff;
     position: relative;
-}
-
-.close {
-    width: 60px;
-    height: 60px;
-    padding: 10px;
-    font-size: 30px;
-    text-align: center;
-    color: #ccc;
-    position: absolute;
-    top: 0;
-    right: 0;
 }
