--- a/css/components/close.css
+++ b/css/components/close.css
@@ -1,3 +1,12 @@
 .close {
-    
+    width: 60px;
+    height: 60px;
+    padding: 10px;
+    font-size: 30px;
+    text-align: center;
+    color: #ccc;
+    position: absolute;
+    top: 0;
+    right: 0;
+    cursor: pointer;
 }
