--- a/css/base/base.css
+++ b/css/base/base.css
@@ -9,4 +9,5 @@ body *  {
 body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #8396d4;
+    height: 100vh;
 }
