--- a/css/base/layout.css
+++ b/css/base/layout.css
@@ -1,9 +1,10 @@
 .main-content {
     width: 800px;
-    margin-top: 10vh;
-    margin-left: calc(50% - 400px);
     display: inline-block;
     position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .left-col {
