add: content center

--- a/css/base/layout.css
+++ b/css/base/layout.css
@@ -1,7 +1,7 @@
 .main-content {
     width: 800px;
     display: inline-block;
-    position: relative;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
