--- a/css/base/base.css
+++ b/css/base/base.css
@@ -10,4 +10,5 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #8396d4;
     height: 100vh;
+    position: relative;
 }
