add: Main background #21

--- a/css/base/base.css
+++ b/css/base/base.css
@@ -11,4 +11,9 @@ body {
     background-color: #8396d4;
     height: 100vh;
     position: relative;
+    background-image: url(../../img/img.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    backdrop-filter: blur(8px);
 }
